# subscript

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  MANIFEST.in  README.md  README.rst  SECURITY.md  appveyor.yml  contributing.html  contribution.html  docs_requirements.txt  genindex.html  history.html  index.html  intro.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test_requirements.txt  usage.html
.github/workflows/: codecov.yml  codeql.yml  linting.yml  publish.yml  subscript.yml
_sources/: contributing.rst.txt  contribution.rst.txt  index.rst.txt  overview.rst.txt
_sources/scripts/: check_swatinit.rst.txt  co2_containment.rst.txt  csv_merge.rst.txt  eclcompress.rst.txt  field_statistics.rst.txt  fmu_copy_revision.rst.txt  merge_schedule.rst.txt  ofmvol2csv.rst.txt  pack_sim.rst.txt  prtvol2csv.rst.txt  ri_wellmod.rst.txt  rmsecl_volumetrics.rst.txt  runeclipse.rst.txt  sw_model_utilities.rst.txt  vfp2csv.rst.txt
_sources/subscript/: subscript.casegen_upcars.model.rst.txt  subscript.casegen_upcars.rst.txt  subscript.casegen_upcars.udf.rst.txt  subscript.casegen_upcars.udf_arg_parser.rst.txt  subscript.check_swatinit.check_swatinit.rst.txt  subscript.check_swatinit.constants.rst.txt  subscript.check_swatinit.pillarmodel.rst.txt  subscript.check_swatinit.plotter.rst.txt  subscript.check_swatinit.rst.txt  subscript.co2_containment.calculate.rst.txt  subscript.co2_containment.co2_calculation.rst.txt  subscript.co2_containment.co2_containment.rst.txt  subscript.co2_containment.rst.txt  subscript.create_date_files.create_date_files.rst.txt  subscript.create_date_files.rst.txt  subscript.csv2ofmvol.csv2ofmvol.rst.txt  subscript.csv2ofmvol.rst.txt  subscript.csv_merge.rst.txt  subscript.eclcompress.allowlist.rst.txt  subscript.eclcompress.eclcompress.rst.txt  subscript.eclcompress.rst.txt  subscript.field_statistics.field_statistics.rst.txt  subscript.field_statistics.rst.txt  subscript.fmu_copy_revision.fmu_copy_revision.rst.txt  subscript.fmu_copy_revision.rst.txt  subscript.fmuobs.fmuobs.rst.txt  subscript.gen_satfunc.gen_satfunc.rst.txt  subscript.gen_satfunc.rst.txt  subscript.grav_subs_maps.grav_subs_maps.rst.txt  subscript.grav_subs_maps.rst.txt  subscript.grav_subs_points.grav_subs_points.rst.txt  subscript.grav_subs_points.rst.txt  subscript.hook_implementations.forward_model_steps.rst.txt  subscript.hook_implementations.jobs.rst.txt  subscript.hook_implementations.rst.txt  subscript.interp_relperm.interp_relperm.rst.txt  subscript.merge_unrst_files.merge_unrst_files.rst.txt  subscript.merge_unrst_files.rst.txt  subscript.ofmvol2csv.ofmvol2csv.rst.txt  subscript.params2csv.params2csv.rst.txt  (+28 more)
_static/: documentation_options.js
ci/: testkomodo.sh
ci/jenkins/: testkomodo.sh
docs/: conf.py  contributing.rst  contribution.rst  history.rst  index.rst  intro.rst  overview.rst  subscript.rst  usage.rst  users.rst
docs/scripts/: bjobsusers.rst  casegen_upcars.rst  check_swatinit.rst  (+31 more)
html/: .buildinfo  history.html  search.html  searchindex.js
scripts/: bjobsusers.html  casegen_upcars.html  check_swatinit.html  co2_containment.html  convert_grid_format.html  create_date_files.html  csv2ofmvol.html  csv_merge.html  csv_stack.html  eclcompress.html  ecldiff2roff.html  field_statistics.html  fmu_copy_revision.html  fmuobs.html  gen_satfunc.html  grav_subs_maps.html  grav_subs_points.html  interp_relperm.html  merge_rft_ertobs.html  merge_schedule.html  merge_unrst_files.html  ofmvol2csv.html  pack_sim.html  params2csv.html  presentvalue.html  prtvol2csv.html  restartthinner.html  ri_wellmod.html  rmsecl_volumetrics.html  runeclipse.html  runrms.html  sector2fluxnum.html  summaryplot.html  sunsch.html  sw_model_utilities.html  vfp2csv.html  welltest_dpds.html
subscript/: __main__.py  bjobsusers.py  cli.py  csv2ofmvol.py  csvMergeEnsembles.py  csvStack.py  eclcompress.py  extract_resvol_from_prtfile.pl  extract_vol_from_prtfile.pl  gen_satfunc.py  interp_relperm.py  merge_schedule.py  params2csv.py  presentvalue.py  prtvol2csv.py  subscript.bjobsusers.bjobsusers.html  subscript.bjobsusers.html  subscript.casegen_upcars.casegen_upcars.html  subscript.casegen_upcars.html  subscript.casegen_upcars.model.html  subscript.casegen_upcars.udf.html  subscript.casegen_upcars.udf_arg_parser.html  subscript.check_swatinit.check_swatinit.html  subscript.check_swatinit.constants.html  subscript.check_swatinit.html  subscript.check_swatinit.pillarmodel.html  subscript.check_swatinit.plotter.html  subscript.co2_containment.calculate.html  subscript.co2_containment.co2_calculation.html  subscript.co2_containment.co2_containment.html  subscript.co2_containment.html  subscript.convert_grid_format.convert_grid_format.html  subscript.convert_grid_format.html  subscript.create_date_files.create_date_files.html  subscript.create_date_files.html  subscript.csv2ofmvol.csv2ofmvol.html  subscript.csv2ofmvol.html  subscript.csv_merge.csv_merge.html  subscript.csv_merge.html  subscript.csv_stack.csv_stack.html  (+75 more)
tests/: _common_fmuobs.py  conftest.py  test_bjobsusers.py  test_casegen_upcars.py  test_check_swatinit.py  test_check_swatinit_simulators.py  test_co2_calculate.py  test_co2_containment.py  test_co2_plume_area.py  test_co2_plume_extent.py  test_co2containment.py  test_complot.py  test_convert_grid_format.py  test_create_date_files.py  test_csv2ofmvol.py  test_csv_merge.py  test_csv_merge_ensembles.py  test_csv_stack.py  test_docs.py  test_eclcompress.py  test_ecldiff2roff.py  test_eclinit2roff.py  test_ertobs.py  test_ertobs2yml.py  test_ertobs_parser.py  test_ertobs_parsers.py  test_ertobs_writers.py  test_field_statistics.py  test_fipmapper.py  test_fmu_copy_revision.py  test_fmudesign.py  test_fmuobs.py  test_fmuobs_functions_4_general_obs_w_drogon.py  test_fmuobs_gen_obs_writers.py  test_fmuobs_make_dictionaries.py  test_fmuobs_parsers.py  test_fmuobs_w_drogon.py  test_fmuobs_w_field_data.py  test_fmuobs_writers.py  test_gen_satfunc.py  (+35 more)
(+753 files in other folders)
