[build-system]
requires = [
    "setuptools>=45.0",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/subscript/version.py"

[project]
name = "subscript"
description = "Equinor's collection of subsurface reservoir modelling scripts"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Equinor", email = "rnyb@equinor.com" },
]
keywords = ["energy", "subsurface", "reservoir", "scientific", "engineering"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
]
dynamic = ["version"]
dependencies = [
    "resdata",
    "res2df",
    "ert>=10.2.0b13",
    "fmu-tools",
    "grid3d_maps",
    "jinja2",
    "matplotlib",
    "numpy",
    "opm>=2023.04",
    "pandas",
    "pydantic",
    "pyscal",
    "pyyaml",
    "scipy",
    "seaborn",
    "xtgeo",
]

[project.optional-dependencies]
tests = [
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-mpl",
    "pytest-xdist",
    "rstcheck",
    "rstcheck-core",
    "ruff",
    "types-Jinja2",
    "types-PyYAML",
    "types-python-dateutil",
    "pandas-stubs",
    "types-seaborn",
    "scipy-stubs",
]
docs = [
    "autoapi",
    "sphinx",
    "sphinx-argparse",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-togglebutton",
    "sphinx_rtd_theme",
]

[project.urls]
Homepage = "https://github.com/equinor/subscript"
Repository = "https://github.com/equinor/subscript"
Documentation = "https://equinor.github.io/subscript"

[project.scripts]
bjobsusers = "subscript.bjobsusers.bjobsusers:main"
casegen_upcars = "subscript.casegen_upcars.casegen_upcars:main"
check_swatinit = "subscript.check_swatinit.check_swatinit:main"
convert_grid_format = "subscript.convert_grid_format.convert_grid_format:main"
create_date_files = "subscript.create_date_files.create_date_files:main"
csv2ofmvol = "subscript.csv2ofmvol.csv2ofmvol:main"
csv_merge = "subscript.csv_merge.csv_merge:main"
csv_stack = "subscript.csv_stack.csv_stack:main"
eclcompress = "subscript.eclcompress.eclcompress:main"
ecldiff2roff = "subscript.ecldiff2roff.ecldiff2roff:main"
fmu_copy_revision = "subscript.fmu_copy_revision.fmu_copy_revision:main"
fmuobs = "subscript.fmuobs.fmuobs:main"
grav_subs_maps = "subscript.grav_subs_maps.grav_subs_maps:main"
grav_subs_points = "subscript.grav_subs_points.grav_subs_points:main"
interp_relperm = "subscript.interp_relperm.interp_relperm:main"
merge_rft_ertobs = "subscript.merge_rft_ertobs.merge_rft_ertobs:main"
merge_unrst_files = "subscript.merge_unrst_files.merge_unrst_files:main"
ofmvol2csv = "subscript.ofmvol2csv.ofmvol2csv:main"
pack_sim = "subscript.pack_sim.pack_sim:main"
params2csv = "subscript.params2csv.params2csv:main"
presentvalue = "subscript.presentvalue.presentvalue:main"
prtvol2csv = "subscript.prtvol2csv.prtvol2csv:main"
restartthinner = "subscript.restartthinner.restartthinner:main"
rmsecl_volumetrics = "subscript.rmsecl_volumetrics.rmsecl_volumetrics:main"
sector2fluxnum = "subscript.sector2fluxnum.sector2fluxnum:main"
summaryplot = "subscript.summaryplot.summaryplot:main"
sw_model_utilities = "subscript.sw_model_utilities.sw_model_utilities:main"
sunsch = "subscript.sunsch.sunsch:main"
vfp2csv = "subscript.vfp2csv.vfp2csv:main"
welltest_dpds = "subscript.welltest_dpds.welltest_dpds:main"
field_statistics = "subscript.field_statistics.field_statistics:main"


[project.entry-points.ert]
subscript_fmsteps = "subscript.hook_implementations.forward_model_steps"
CsvMerge = "subscript.csv_merge.csv_merge"
CsvStack = "subscript.csv_stack.csv_stack"
FmuObs = "subscript.fmuobs.fmuobs"
Params2Csv = "subscript.params2csv.params2csv"
FieldStatistics = "subscript.field_statistics.field_statistics"

[tool.setuptools]
script-files = [
    "src/subscript/legacy/duf",
    "src/subscript/legacy/eclmanual",
    "src/subscript/legacy/ertwatch",
    "src/subscript/legacy/list_rms_usage",
    "src/subscript/legacy/nosim",
    "src/subscript/legacy/runeclipse",
]

[tool.mypy]

plugins = ["pydantic.mypy"]

strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = [
    "xtgeo.*",
    "opm.*",
    "resdata.*",
    "ert",
    "grid3d_maps.*",
    "fmu.tools.*",
    "cwrap",
    "grpc"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
norecursedirs = [
    ".git",
    ".tox",
    ".env",
    "dist",
    "build",
    "opm-common",
]
addopts = "-ra --strict-markers --ignore=docs/conf.py --ignore=.eggs"
markers = [
    "integration: Marks a test as an integration test",
    "plot: Marks a test as interactive, plots will flash to the screen",
]

[tool.rstcheck]
ignore_directives = ["argparse", "automodule"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = [
    "C",
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "PIE",  # flake8-pie
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "SIM",  # flake8-simplify
    "W",  # pycodestyle warning
    "PD",  # pandas-vet
    "UP",  # pyupgrade
    "RUF", # RUFF specific rules
    "PL",  # pylint
    "B",  # flake8-bugbear
    "ANN",  # flake8-annotations
]
ignore = [
    "C901",  # complex-structure
    "PD013",  # pandas-use-of-dot-stack
    "PLR0915",  # too-many-statements
    "PLR0912",  # too-many-branches
    "PLR2004",  # magic-value-comparison
    "PLW2901",  # redefined-loop-name
]

[tool.ruff.lint.extend-per-file-ignores]
"src/subscript/sunsch/time_vector.py" = ["ANN"]
"src/subscript/casegen_upcars/*" = ["ANN"]
"src/subscript/field_statistics/*" = ["ANN"]
"src/subscript/fmu_copy_revision/*" = ["ANN"]
"tests/*" = ["ANN"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pylint]
max-args = 35
